Fix alignment when job posting count is few

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -88,6 +88,7 @@ textarea {
 .job-postings-list {
   flex: 2;
   display: flex;
+  justify-content: flex-end;
   flex-direction: column-reverse;
   gap: 10px;
 }
